@@ -5,6 +5,8 @@ buildscript {
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
+        classpath "org.grails.plugins:hibernate5:$gormVersion"
+        classpath "org.grails.plugins:views-gradle:2.1.0.RC3"
     }
 }
 
@@ -19,11 +21,6 @@ repositories {
     maven {url 'https://repo.grails.org/grails/core'}
 }
 
-configurations.all {
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-}
-
-
 configurations {
     developmentOnly
     runtimeClasspath {
@@ -33,47 +30,47 @@ configurations {
 
 dependencies {
     //-----------------------------------
-    // Grails 4.0.6 REST Plugin Defaults
+    // Grails 5.0 REST Plugin Defaults
     //-----------------------------------
-    compile "org.springframework.boot:spring-boot-starter-logging"
-    compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.grails:grails-core"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile "org.springframework.boot:spring-boot-starter-tomcat"
-    compile "org.grails:grails-plugin-url-mappings"
-    compile "org.grails:grails-plugin-rest"
-    compile "org.grails:grails-plugin-codecs"
-    compile "org.grails:grails-plugin-interceptors"
-    compile "org.grails:grails-plugin-services"
-    compile "org.grails:grails-plugin-datasource"
-    compile "org.grails:grails-plugin-databinding"
-    compile "org.grails:grails-web-boot"
-    compile "org.grails:grails-logging"
-    compile "org.grails.plugins:async"
-    compile "org.grails.plugins:events"
-    compile "org.grails.plugins:hibernate5"
     compileOnly "io.micronaut:micronaut-inject-groovy"
-    console "org.grails:grails-console"
-    profile "org.grails.profiles:rest-api"
+    implementation "org.springframework.boot:spring-boot-starter-logging"
+    implementation "org.springframework.boot:spring-boot-autoconfigure"
+    implementation "org.grails:grails-core"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-tomcat"
+    implementation "org.grails:grails-plugin-url-mappings"
+    implementation "org.grails:grails-plugin-rest"
+    implementation "org.grails:grails-plugin-codecs"
+    implementation "org.grails:grails-plugin-interceptors"
+    implementation "org.grails:grails-plugin-services"
+    implementation "org.grails:grails-plugin-datasource"
+    implementation "org.grails:grails-plugin-databinding"
+    implementation "org.grails:grails-web-boot"
+    implementation "org.grails:grails-logging"
+    implementation "org.grails.plugins:cache"
+    implementation "org.grails.plugins:async"
+    implementation "org.grails.plugins:hibernate5"
+    profile "org.grails.profiles:rest-api-plugin"
 
-    runtime "org.glassfish.web:el-impl:2.1.2-b03"
-    runtime "com.h2database:h2"
-    runtime "org.apache.tomcat:tomcat-jdbc"
-    runtime "javax.xml.bind:jaxb-api:2.3.0"
+    runtimeOnly "org.glassfish.web:el-impl:2.2.1-b05"
+    runtimeOnly "com.h2database:h2"
+    runtimeOnly "org.apache.tomcat:tomcat-jdbc"
+    runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
+
 
     //--------------------
     // Hoist Additions
     //--------------------
-    compile "org.codehaus.groovy:groovy-dateutil:2.5.8"
+    compile "org.codehaus.groovy:groovy-dateutil:3.0.9"
     provided "org.grails:grails-plugin-domain-class"
     compile "org.grails.plugins:mail:3.0.0"
 
-    // Quartz, with Grails 4 workaround (https://github.com/grails-plugins/grails-quartz/issues/107
+    // Quartz, with Grails 4/5 workaround (https://github.com/grails-plugins/grails-quartz/issues/107
     compile("org.quartz-scheduler:quartz:2.2.3") {exclude group: 'slf4j-api', module: 'c3p0'}
     compile 'org.grails.plugins:quartz:2.0.13'
 
-    compile "org.hibernate:hibernate-core:5.4.14.Final"
-    compile "net.sf.ehcache:ehcache:2.10.6"
+    compile "org.hibernate:hibernate-core:5.5.7.Final"
+    compile "net.sf.ehcache:ehcache:2.10.9.2"
 
     compile "org.apache.poi:poi:4.1.2"
     compile "org.apache.poi:poi-ooxml:4.1.2"
@@ -81,37 +78,16 @@ dependencies {
     compile "org.apache.poi:ooxml-schemas:1.4"
 
     compile "org.springframework:spring-websocket"
-    compile "org.apache.httpcomponents.client5:httpclient5:5.0.3"
+    compile "org.apache.httpcomponents.client5:httpclient5:5.1"
     compile 'org.jasypt:jasypt:1.9.3'
     compile "commons-io:commons-io:2.8.0"
-    runtime "net.java.dev.jna:jna:4.5.1"
+    runtime "net.java.dev.jna:jna:4.5.1"   //TODO:  Is this needed?
     compile "org.owasp.encoder:encoder:1.2.3"
 }
 
 def allJvmArgs = [
         '-Dspring.output.ansi.enabled=always'
 ]
-// Prevent reflection warning: See https://dev.to/erichelgeson/removing-illegal-reflective-access-warnings-in-grails-4-393o
-allJvmArgs += [
-        "java.management/com.sun.jmx.mbeanserver", "java.base/java.io", "java.base/java.lang", "java.base/java.lang.annotation",
-        "java.base/java.lang.invoke", "java.base/java.lang.module", "java.base/java.lang.ref", "java.base/java.lang.reflect",
-        "java.base/java.math", "java.base/java.net", "java.base/java.net.spi", "java.base/java.nio", "java.base/java.nio.channels",
-        "java.base/java.nio.channels.spi", "java.base/java.nio.charset", "java.base/java.nio.charset.spi", "java.base/java.nio.file",
-        "java.base/java.nio.file.attribute", "java.base/java.nio.file.spi", "java.base/java.security", "java.base/java.security.acl",
-        "java.base/java.security.cert", "java.base/java.security.interfaces", "java.base/java.security.spec", "java.base/java.text",
-        "java.base/java.text.spi", "java.base/java.time", "java.base/java.time.chrono", "java.base/java.time.format",
-        "java.base/java.time.temporal", "java.base/java.time.zone", "java.base/java.util", "java.base/java.util.concurrent",
-        "java.base/java.util.concurrent.atomic", "java.base/java.util.concurrent.locks", "java.base/java.util.function",
-        "java.base/java.util.jar", "java.base/java.util.regex", "java.base/java.util.spi", "java.base/java.util.stream",
-        "java.base/java.util.zip", "java.datatransfer/java.awt.datatransfer", "java.desktop/java.applet", "java.desktop/java.awt",
-        "java.desktop/java.awt.color", "java.desktop/java.awt.desktop", "java.desktop/java.awt.dnd", "java.desktop/java.awt.dnd.peer",
-        "java.desktop/java.awt.event", "java.desktop/java.awt.font", "java.desktop/java.awt.geom", "java.desktop/java.awt.im",
-        "java.desktop/java.awt.im.spi", "java.desktop/java.awt.image", "java.desktop/java.awt.image.renderable",
-        "java.desktop/java.awt.peer", "java.desktop/java.awt.print", "java.desktop/java.beans", "java.desktop/java.beans.beancontext",
-        "java.instrument/java.lang.instrument", "java.logging/java.util.logging", "java.management/java.lang.management",
-        "java.prefs/java.util.prefs", "java.rmi/java.rmi", "java.rmi/java.rmi.activation", "java.rmi/java.rmi.dgc",
-        "java.rmi/java.rmi.registry", "java.rmi/java.rmi.server", "java.sql/java.sql"
-].collect {"--add-opens=$it=ALL-UNNAMED".toString()}
 
 bootRun {
     jvmArgs(allJvmArgs)
@@ -124,9 +100,7 @@ tasks.withType(GroovyCompile) {
     }
 }
 
-
 bootJar.enabled = false
-
 
 //------------------------
 // Maven publishing
